A changelog for recent builds as pasted into the sourceforge page.

Generally created by hand after running:
   cvs -z5 log -rb2xx: > log.out
   {py_dir}\Tools\scripts\logmerge.py -t < log.out > log2.out
However contributors are encouraged to add their own entries for their work.

Since build 214:
----------------

* Fix problem causing ASP pages to fail when reloaded.

* mapiutil.py functions GetMapiTypeName and GetPropTagName have been modified
  to better distinguish between PT_UNICODE and PT_STRING8 type names
  during reverse lookups. (Nick Czeczulin)

* Fix encoding problem in makepy (Massa, Harald Armin)

Since build 213:
----------------

* pythoncom gets better support for 64bit integers, including in arrays.

* pythoncom may fail to import on Windows 2000 installs with a default IE
  (Roger)

* Fix Pythonwin when backspacing over an extended character (from markt
 (metolone), via bug 2618277)

* Fixed a regression which would cause an error if you compared a PyTime 
  object to any other type, including None

Since build 212:
----------------

* py3k work - see the notes in the main documentation index for details,
  but this entailed a huge overhaul of almost all the pywin32 sources.
  Many things have been modernized for the first time in over a decade,
  and may new tests have been added.  As a result, build 213 will not
  be recommended for production work and should be treated as beta quality.

  Huge thanks to:
  - Roger Upole: for starting the py3k work, and without whom the py3k work
    would literally not yet have started.
  - Jason R. Coombs: for help porting win32timezone to py3k and for helping
    with the new datetime object support.
  - Vernon Cole: for help with porting adodbapi to py3k.

* win32eventlog.OpenEventLog and OpenBackupEventLog now return a PyHANDLE
  object which auto-closes on destruction.

* pythoncom servers which implemented 'universal' vtable interfaces from a